add dto and commands

--- a/LawFirm.Application/LawFirm.Application.csproj
+++ b/LawFirm.Application/LawFirm.Application.csproj
@@ -33,7 +33,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Queries\" />
+    <Folder Include="Commands\Requests\DeleteRequest\" />
+    <Folder Include="Commands\Requests\UpdateRequest\" />
+    <Folder Include="Queries\Handlers\" />
+    <Folder Include="Queries\Requests\" />
   </ItemGroup>
 
 </Project>
